--- a/config/database.yml
+++ b/config/database.yml
@@ -27,7 +27,7 @@ production:
   database: sinsa
   username: root
   password: q1w2e3r4
-  host: 18.216.40.129
+  host: localhost
   port: 3306
   secure_auth: false
   pool: 35
